fixed some layout issues

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -6,21 +6,23 @@ body {
     z-index: 1;
     position: relative;
     text-align: center;
-    padding-top: 40vh;
+    padding-top: 35vh;
 }
 
-#landing-header h1 {
+#landing-header h1, h3 {
     color: #ffffff;
 }
 
+#landing-header h3 {
+    margin-bottom: 2rem;
+}
+
 #searchForm {
-    margin: 0 auto;
+    margin: 10px auto;
     width: 350px;
 }
 
-#searchBar{
-    margin: 10px;
-}
+
 
 .slideshow {
     position: fixed;
