--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,11 +1,28 @@
-/* .form-group{
-    margin-bottom: 0.5rem;
-} */
+.display-4{
+    font-weight: 500;
+}
+.jumbotron {
+    padding: 3rem 2rem;
+}
+
+.search input{
+    margin: 0.25rem 0;
+}
 .form-signin {
     width: 100%;
     max-width: 330px;
     padding: 15px;
     margin: 0 auto;
+}
+
+#campground-grid .card-img-top {
+    width: 100%;
+    height: 30vw;
+    object-fit: cover;
+}
+
+#main {
+    padding: 0;
 }
 
 .form-signin .form-control {
